--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@react-router/dev": "",
     "@react-router/fs-routes": "",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/express-serve-static-core": "^5.0.6",
@@ -32,6 +33,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "tailwindcss": "^4.1.4",
     "tsx": "^4.19.3",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
